wcp/workload/tbs/manifests/pod-webhook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-injection-webhook
  namespace: cert-injection-webhook
  labels:
    app: cert-injection-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-injection-webhook
  template:
    metadata:
      labels:
        app: cert-injection-webhook
    spec:
      serviceAccountName: cert-injection-webhook-sa
      containers:
      - name: server
        image: dev.registry.pivotal.io/build-service/pod-webhook@sha256:d40667df0d832800d894d4f9c1f662f96805de5dd5f6951d99ac0b56d56db2da
        imagePullPolicy: Always
        args:
        - --
        - pod-webhook
        - -label=kpack.io/build
        volumeMounts:
        - name: webhook-ca-cert
          mountPath: /run/config_maps/ca_cert
          readOnly: true
        ports:
        - containerPort: 8443
          name: webhook-port
      volumes:
      - name: webhook-ca-cert
        configMap:
          name: ca-cert
---
apiVersion: v1
kind: Service
metadata:
  name: cert-injection-webhook
  namespace: cert-injection-webhook
spec:
  selector:
    app: cert-injection-webhook
  ports:
  - port: 443
    targetPort: webhook-port
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: defaults.webhook.cert-injection.tanzu.vmware.com
webhooks:
- name: defaults.webhook.cert-injection.tanzu.vmware.com
  clientConfig:
    service:
      name: cert-injection-webhook
      namespace: cert-injection-webhook
  rules:
  - operations:
    - CREATE
    - UPDATE
    apiGroups:
    - ""
    apiVersions:
    - v1
    resources:
    - pods
